<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <RelativeLayout
        style="@style/TitleBar"
        android:layout_width="match_parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/imageBack"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp" >

            <ImageView
                android:id="@+id/img_about_tastesync_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left|center"
                android:background="@drawable/ic_bt_back1"
                android:clickable="true"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/imageBack"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp" >
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        style="@style/Body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/bg44"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="Avenir"
                android:text="@string/txt_title_about"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="Avenir"
                android:text="@string/txt_title_about_1"
                android:textColor="@android:color/white"
                android:textSize="13dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_about_service"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg44"
            android:clickable="true"
            android:fontFamily="Avenir"
            android:padding="10dp"
            android:text="@string/txt_about_btn_2"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_about_policy"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg44"
            android:fontFamily="Avenir"
            android:padding="10dp"
            android:text="@string/txt_about_btn_3"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>