<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <RelativeLayout
        style="@style/TitleBar"
        android:layout_width="match_parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/imageBack"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp" >

            <ImageView
                android:id="@+id/img_restaurant_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:background="@drawable/ic_bt_back1"
                android:clickable="true"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/imageBack"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp" >
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        style="@style/Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_res_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/box"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/txt_restaurant_find_text"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg44"
                android:orientation="vertical"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/tv_name_res_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="Avenir"
                    android:gravity="center"
                    android:text="An Thai&apos;s Restaurant List"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg100"
                android:orientation="vertical"
                android:padding="10dp" >

                <LinearLayout
                    android:id="@+id/layout_click_find_res"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/img_click_find_res"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/icon_filter"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:id="@+id/tv_click_find_res"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:clickable="true"
                        android:fontFamily="Avenir"
                        android:gravity="left"
                        android:padding="5dp"
                        android:text="@string/txt_filter"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <ListView
                android:id="@+id/lv_find_frofile_res"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:cacheColorHint="#00000000"
                android:listSelector="@android:color/transparent"
                android:padding="5dp" >
            </ListView>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>