<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <RelativeLayout
        style="@style/TitleBar"
        android:layout_width="match_parent" >
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titlebar_container"
        android:layout_margin="20dp"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/layout_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg100"
                android:orientation="vertical"
                android:padding="10dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <ImageView
                            android:id="@+id/img_login_single_avatar"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/avatar"
                            android:contentDescription="@string/app_name" />

                        <TextView
                            android:id="@+id/txt_login_single_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:fontFamily="Avenir"
                            android:text="An Thai"
                            android:textColor="@android:color/white"
                            android:textSize="18dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/txt_login_single_friends"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="Avenir"
                            android:text="An Thai already use TasteSync"
                            android:textColor="@android:color/white" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg340"
                android:orientation="vertical"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/txt_login_single_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:fontFamily="Avenir"
                    android:gravity="center"
                    android:text="@string/txt_login_single_title"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:visibility="visible" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent"
                            android:orientation="vertical" >

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp" >

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="3"
                                    android:fontFamily="Avenir"
                                    android:text="@string/txt_login_single_cusine"
                                    android:textColor="@android:color/white" />
                            </LinearLayout>

                            <AutoCompleteTextView
                                android:id="@+id/auto_login_single_cusine"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="10dp"
                                android:imeOptions="actionDone"
                                android:maxLines="1"
                                android:padding="5dp"
                                android:singleLine="true"
                                android:textColor="#000000" />
                            <!-- android:descendantFocusability="blocksDescendants" -->

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp" >

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="3"
                                    android:fontFamily="Avenir"
                                    android:text="@string/txt_login_single_restaurants_top"
                                    android:textColor="@android:color/white" />
                            </LinearLayout>

                            <AutoCompleteTextView
                                android:id="@+id/auto_login_single_restaurant_1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:padding="5dp"
                                android:textColor="#000000" />

                            <AutoCompleteTextView
                                android:id="@+id/auto_login_single_restaurant_2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="10dp"
                                android:imeOptions="actionDone"
                                android:maxLines="1"
                                android:padding="5dp"
                                android:singleLine="true"
                                android:textColor="#000000" />

                            <AutoCompleteTextView
                                android:id="@+id/auto_login_single_restaurant_3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginBottom="10dp"
                                android:layout_marginTop="10dp"
                                android:imeOptions="actionDone"
                                android:maxLines="1"
                                android:padding="5dp"
                                android:singleLine="true"
                                android:textColor="#000000" />
                        </LinearLayout>
                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_login_single_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg44"
                android:text="@string/txt_login_single_done"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/layout_temp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>